-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
In subdirectory mount, the filesystem-wide default LMV doesn't take effect. There are two things need to be done:
- enforce the filesystem-wide default LMV on subdirectory mount if it's not set separately.
- "lfs getdirstripe -D <subdir_mount>" should print the filesystem-wide default LMV.
- is related to
-
LU-15850 MDT QOS should always be used for round-robin directories.
-
- Resolved
-